--- a/libs/mico/HISTORY
+++ b/libs/mico/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-10-10 Bor Kraljič <pyrobor@ver.si>
 	* DEPENDS: removed optional dependency on qt-x11
 
