--- a/libs/poco/HISTORY
+++ b/libs/poco/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-08-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.4.1p1
 
