--- a/libs/redland/HISTORY
+++ b/libs/redland/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.17
 
