--- a/mail/courier-imap/HISTORY
+++ b/mail/courier-imap/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-06-15 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: added SOURCE2_IGNORE for signature
 
