--- a/mail/gotmail/HISTORY
+++ b/mail/gotmail/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-09-30 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated to 0.9.0; removed UPDATED
 
