--- a/mail/dovecot/HISTORY
+++ b/mail/dovecot/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-01-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.21; SECURITY_PATCH++ (fixes several
 	  crashes not reported via CVEs)
