--- a/mail/exim/HISTORY
+++ b/mail/exim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.84
 
