--- a/mail/fetchmail/HISTORY
+++ b/mail/fetchmail/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 6.3.26
 
