--- a/mail/mpop/HISTORY
+++ b/mail/mpop/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-01-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.22
 
