--- a/mail/isync/HISTORY
+++ b/mail/isync/HISTORY
@@ -1,2 +1,5 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
