--- a/mail/mailx/HISTORY
+++ b/mail/mailx/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-11-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added, for openssl required dependency
 	* BUILD: fixed multijob build
