--- a/mail/nbsmtp/HISTORY
+++ b/mail/nbsmtp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-09-30 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated SOURCE_URL to Debian's (gentoo-es.org is dead)
 	  updated SHORT and LONG descriptions
