--- a/mail/libetpan/HISTORY
+++ b/mail/libetpan/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-10-14 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Uses any provider of LIBSASL
 
