--- a/mail/openwebmail/HISTORY
+++ b/mail/openwebmail/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-10-12 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed SOURCE_URL, removed not working SOURCE_URLs
 	  fixed long description wrap
