--- a/mail/spamassassin/HISTORY
+++ b/mail/spamassassin/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-06-13 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 3.2.5
 
