--- a/mail/sylpheed/HISTORY
+++ b/mail/sylpheed/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-06-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.4.2
 
