--- a/mobile/barry/HISTORY
+++ b/mobile/barry/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-05-09 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: libusb => LIBUSB
 
