--- a/net/accel-ppp/HISTORY
+++ b/net/accel-ppp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.0
 	* CONFIGURE: added ipoe configuration; backported old driver config opt
