--- a/net/bind/HISTORY
+++ b/net/bind/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-12-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.8.4-P1; SECURITY_PATCH++
 
