--- a/net/envbot/HISTORY
+++ b/net/envbot/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2007-11-13 Arvid Norlander <anmaster AT envbot DOT org>
 	* DETAILS: updated spell to 0.0.1
 
