--- a/net/iscsitarget/HISTORY
+++ b/net/iscsitarget/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-06-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, INSTALL, {PRE_,}BUILD, FINAL, ldflags.patch,
 	  init.d/iscsi-target{,.conf}: spell created
