--- a/net/ipsec-tools/HISTORY
+++ b/net/ipsec-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.8.2
 
