--- a/net/netembryo/HISTORY
+++ b/net/netembryo/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-08-26 Peng Chang (Charles) <chp@sourcemage.org>
 	* DETAILS: updated spell to 0.1.1
 
