--- a/net/openntpd/HISTORY
+++ b/net/openntpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-08-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: actually regenerate configure script after patching
