--- a/net/nsd/HISTORY
+++ b/net/nsd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.16
 
