--- a/net/ntop/HISTORY
+++ b/net/ntop/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-08-28 David C. Haley <khoralin@gmail.com>
 	* DETAILS: version bump 3.3.9 -> 5.0.1
 	* PRE_BUILD: removed geoip "stuff"
