--- a/net/openvpn/HISTORY
+++ b/net/openvpn/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-02-13 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2.3.2
 	* DEPENDS: added linux-pam as dependency
