--- a/net/net-snmp/HISTORY
+++ b/net/net-snmp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.7.2
 
