--- a/net/slowhttptest/HISTORY
+++ b/net/slowhttptest/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6
 
