--- a/net/socat/HISTORY
+++ b/net/socat/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-03-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.7.2.4
 
