--- a/net/tcpdump/HISTORY
+++ b/net/tcpdump/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.6.1
 
