--- a/net/vtun/HISTORY
+++ b/net/vtun/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-03-11 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 3.0.1
 	  Removed UPDATED
