--- a/net/stunnel/HISTORY
+++ b/net/stunnel/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-02-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.56; added mirrors for pgp signature;
 	  ACTIVE_FTP=on (official ftp doesn't support passive ftp connections)
