--- a/net/unbound/HISTORY
+++ b/net/unbound/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-02-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.16
 
