--- a/net/wvstreams/HISTORY
+++ b/net/wvstreams/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-10-25 Ladislav Hagara <hgr@vabo.cz>
 	* PRE_BUILD: updated to apply openssl 1.0.0 and parallel-make patches
 	* wvstreams-4.6.1-{openssl-1.0.0,parallel-make}.patch: added from Gentoo
