--- a/perl-cpan/net-ssleay/HISTORY
+++ b/perl-cpan/net-ssleay/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.42; renewed urls
 
