--- a/perl-cpan/parrot/HISTORY
+++ b/perl-cpan/parrot/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.7.0/5.0.0
 
