--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-08-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.3.29 (previous); SECURITY_PATCH++
 
