--- a/printer/gtklp/HISTORY
+++ b/printer/gtklp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-08-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.9; renewed website
 	* DEPENDS: added missing dependencies
