--- a/printer/zint/HISTORY
+++ b/printer/zint/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-11-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.4.2
 	  new URL
