--- a/printer/pt/HISTORY
+++ b/printer/pt/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-17-06 Bor Kraljič <pyrobor@ver.si>
 	* pt-1.0.2.tar.gz.sig: resigned sources due to gpg error (bug #15746)
 
