--- a/python-pypi/m2crypto/HISTORY
+++ b/python-pypi/m2crypto/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up
 	* BUILD: useless, due to the new build system of section
