--- a/python-pypi/papyon/HISTORY
+++ b/python-pypi/papyon/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.6
 
