--- a/python-pypi/pymsn/HISTORY
+++ b/python-pypi/pymsn/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-01-27 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
 
