--- a/python-pypi/scrapy/HISTORY
+++ b/python-pypi/scrapy/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-07-25 Bor Kraljič <pyrobor@ver.si>
 	* DOWNLOAD: source $GRIMOIRE/hg_download.function before using hg_download
 
