--- a/python-pypi/twisted/HISTORY
+++ b/python-pypi/twisted/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-02-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 12.0.0
 	  new url
