--- a/python-pypi/roundup/HISTORY
+++ b/python-pypi/roundup/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.0; switched to upstream gpg checking
 	* DEPENDS: added jinja2 suggest dep
