--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-02-05 Tommy Boatman <tboatman@sourcemage.org>
 	* BUILD: removed demos to match CONFIGURE
 
