--- a/ruby-raa/ruby-1.8/HISTORY
+++ b/ruby-raa/ruby-1.8/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-07-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.7-p374; SECURITY_PATCH++ (CVE-2013-4073,
 	  CVE-2013-1821)
