--- a/ruby-raa/ruby-2.0/HISTORY
+++ b/ruby-raa/ruby-2.0/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.0-p353
 	  SECURITY_PATCH++ fixes CVE-2013-4164
