--- a/ruby-raa/ruby-2.1/HISTORY
+++ b/ruby-raa/ruby-2.1/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-05-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.2
 
