--- a/ruby-raa/ruby-enterprise-edition/HISTORY
+++ b/ruby-raa/ruby-enterprise-edition/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-04-10 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: add ruby-2.0
 
