--- a/security/fingerprint/HISTORY
+++ b/security/fingerprint/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-08-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS, DEPENDS, PRE_BUILD, BUILD, INSTALL: Created
 
