--- a/security/hashkill/HISTORY
+++ b/security/hashkill/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-09-22 Vasil Yonkov <spirtbrat@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
 
