--- a/security/pam-imap/HISTORY
+++ b/security/pam-imap/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-06-15 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* DETAILS: updated spell to 0.3.8
 	* INSTALL: mkdir added
