--- a/security/snort/HISTORY
+++ b/security/snort/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-04-29 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 2.8.6
 
