--- a/security/pwsafe/HISTORY
+++ b/security/pwsafe/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-09-15 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fix long description.
 
