--- a/security/thc-hydra/HISTORY
+++ b/security/thc-hydra/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-08-26 David C. Haley <khoralin@gmail.com>
 	* DETAILS: Version bump 5.4 -> 7.5
 		   SOURCE, SOURCE_URL, SOURCE_DESTINATION updated.
