--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-04-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.46
 	* DEPENDS: lua51 -> LUA
