--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.12.0
 	* DEPENDS: gtk+3 added, gtk+2 options fixed
