--- a/security-libs/nessus-libraries/HISTORY
+++ b/security-libs/nessus-libraries/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2006-10-21 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: depend on openssl unconditionally #11945
 
