--- a/security-libs/openssl_tpm_engine/HISTORY
+++ b/security-libs/openssl_tpm_engine/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-07-30 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS, DETAILS, TRIGGERS: spell created
 
