--- a/security-libs/trousers/HISTORY
+++ b/security-libs/trousers/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-10-02 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: fixed typo in gmp dependency
 
