--- a/shell-term-fm/freerdp/HISTORY
+++ b/shell-term-fm/freerdp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-02-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.2, SOURCE_URL[0] and SOURCE_DIRECTORY updated
 
