--- a/telephony/decibel/HISTORY
+++ b/telephony/decibel/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: new url for svn version
 	* DEPENDS: add cmake, openssl
