--- a/telephony/libexosip2/HISTORY
+++ b/telephony/libexosip2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-07-11 Peng Chang (Charles) <chp@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 3.5.0
