--- a/utils/mnogosearch/HISTORY
+++ b/utils/mnogosearch/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-04-06 Philippe "Puppet_Master" Caseiro  <puppetmaster@sourcemage.org>
 	* DEPENDS: updated mysql dependency to MYSQL provider
 
