--- a/utils/ghasher/HISTORY
+++ b/utils/ghasher/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2007-06-10 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added libglade2
 	* BUILD: mkdir to fix #11377, added INSTALL_ROOT support
