--- a/utils/ipmitool/HISTORY
+++ b/utils/ipmitool/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.8.13
 	  Removed PATCHLEVEL
