--- a/utils/strigi/HISTORY
+++ b/utils/strigi/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2013-03-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.7.8
 	* PRE_BUILD, strigi-0.7.7-{gcc47,ffmpeg-0.11}.patch: removed
