--- a/utils/ntp/HISTORY
+++ b/utils/ntp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: added missing optional dep on net-snmp
 
