--- a/utils/spice/HISTORY
+++ b/utils/spice/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depends on qemu built with nss support
 	  Optionally depends on LIBSASL
