--- a/utils/openipmi/HISTORY
+++ b/utils/openipmi/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.19; cleaned up
 	* BUILD: added make_normal; handle OPENIPMI_OPTS
