--- a/utils/uptimec/HISTORY
+++ b/utils/uptimec/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
