--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-04-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional json-c, PYTHON
 
