--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added missing dependencies
+
 2014-07-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.24.24
 
