--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: add missing dependencies
+
 2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.40.2
 
