--- a/gnome2-libs/libidl/HISTORY
+++ b/gnome2-libs/libidl/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	DETAILS: pcre
+
 2010-04-01 Vasil Yonkov <spirtbrat@sourcemage.org>
 	* DETAILS: updated spell to 0.8.14
 
