--- a/video-libs/libmms/HISTORY
+++ b/video-libs/libmms/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: pcre
+
 2011-01-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.6.2
 
