--- a/xorg-lib/libx11/HISTORY
+++ b/xorg-lib/libx11/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libpthread-stubs
+
 2013-11-22 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.4.3
 	* CONFIGURE: Disable i18n option, breaks XIM + UTF-8
