--- a/xorg-lib/libxaw/HISTORY
+++ b/xorg-lib/libxaw/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added missing X11 dependencies
+
 2011-01-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.9
 
