--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libxdmcp
+
 2010-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7
 	  SOURCE matches upstream posted SHA1
