--- a/xorg-lib/libxext/HISTORY
+++ b/xorg-lib/libxext/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libpthread-stubs, libxcb, libxdmcp
+
 2010-10-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.0
 
