--- a/xorg-lib/libxmu/HISTORY
+++ b/xorg-lib/libxmu/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added missing dependencies
+
 2011-07-25 Bor Kraljič <pyrobor@ver.si>
 	* CONFIGURE: remove "--disable-IPv6" from LIBXMU_OPTS
 
