--- a/xorg-lib/libxrender/HISTORY
+++ b/xorg-lib/libxrender/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added missing dependencies
+
 2010-06-26 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.9.6
 	  SOURCE matches upstream posted SHA1
