--- a/graphics/dcraw/HISTORY
+++ b/graphics/dcraw/HISTORY
@@ -1,3 +1,6 @@
+2014-09-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 9.22
+
 2013-08-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 9.19
 
