--- a/utils/crosstool-ng/HISTORY
+++ b/utils/crosstool-ng/HISTORY
@@ -1,3 +1,6 @@
+2014-09-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.20.0
+
 2012-01-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.13.2
 
