--- a/graphics/gocr/HISTORY
+++ b/graphics/gocr/HISTORY
@@ -1,3 +1,7 @@
+2014-09-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 0.50
+
 2010-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.48
 	* BUILD: deleted
