--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-09-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 32.0.1
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added various missing dependencies
 
