--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,6 @@
+2014-09-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.0
+
 2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.0
 	  new url
