--- a/devel/mono/HISTORY
+++ b/devel/mono/HISTORY
@@ -1,3 +1,7 @@
+2014-09-13 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated MONO_TRUNK=n to 2.11.4
+
 2011-05-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.10.2
 
