--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-14  Ismael Luceno <ismael@sourcemage.org>
+	* shell-term-fm/abduco: new spell, session {at,de}tach support
+
 2014-09-11  Ismael Luceno <ismael@sourcemage.org>
 	* disk/squashfs-tools3: new spell, squashfs-tools 3.x
 
