--- a/libs/newt/HISTORY
+++ b/libs/newt/HISTORY
@@ -1,3 +1,6 @@
+2014-09-14 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Update website
+
 2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.52.17
 
