--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,5 +1,8 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-09-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.6.0 (3)
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-07-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.0 (3)
