--- a/graphics-libs/libpano13/HISTORY
+++ b/graphics-libs/libpano13/HISTORY
@@ -1,3 +1,6 @@
+2014-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.9.19
+
 2011-10-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.9.18
 
