--- a/graphics-libs/vigra/HISTORY
+++ b/graphics-libs/vigra/HISTORY
@@ -1,3 +1,6 @@
+2014-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.10.0
+
 2011-09-21 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.8.0, added one more URL
 	* BUILD: switched to cmake build process
