--- a/x11-toolkits/wxgtk-new/HISTORY
+++ b/x11-toolkits/wxgtk-new/HISTORY
@@ -1,3 +1,7 @@
+2014-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0001-remove-fvisibility-inlines-hidden-from-CXXFLAGS.patch:
+	  fix linker error triggered in spells using wxgtk-new
+
 2014-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.0.1
 
