--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-14 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 13.2
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
