--- a/xorg-app/xinit/HISTORY
+++ b/xorg-app/xinit/HISTORY
@@ -1,3 +1,6 @@
+2014-09-15  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.3.4
+
 2013-09-09  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.3.3
 
