--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-15 Jeremy Blosser <jblosser@sourcemage.org>
+	* database/leveldb: new spell, fast key-value storage library by Google
+
 2014-09-15  Ismael Luceno <ismael@sourcemage.org>
 	* editors/vim-csapprox: new spell, Make gvim-only colorschemes work
 	  transparently in terminal vim
