--- a/editors/lyx/HISTORY
+++ b/editors/lyx/HISTORY
@@ -1,3 +1,6 @@
+2014-09-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.1.1
+
 2014-01-23 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2.0.6
 
