--- a/libs/libiptcdata/HISTORY
+++ b/libs/libiptcdata/HISTORY
@@ -1,3 +1,6 @@
+2014-09-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2010-07-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.4
 
