--- a/devel/extra-cmake-modules/HISTORY
+++ b/devel/extra-cmake-modules/HISTORY
@@ -1,3 +1,6 @@
+2014-09-16  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.1
+
 2014-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.0
 
