--- a/net/chrony/HISTORY
+++ b/net/chrony/HISTORY
@@ -1,3 +1,6 @@
+2014-09-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.31
+
 2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.30
 
