--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-17  Ismael Luceno <ismael@sourcemage.org>
+	* net/corkscrew: new spell, tool for tunneling SSH through HTTP
+	  proxies
+
 2014-09-16  Ismael Luceno <ismael@sourcemage.org>
 	* devel/elfkickers: new spell, Kickers of ELF
 
