--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2014-09-17  Ismael Luceno <ismael@sourcemage.org>
 	* net/corkscrew: new spell, tool for tunneling SSH through HTTP
 	  proxies
+	* libs/isl: new spell, Integer Set Library
 
 2014-09-16  Ismael Luceno <ismael@sourcemage.org>
 	* devel/elfkickers: new spell, Kickers of ELF
