--- a/graphics/nitrogen/HISTORY
+++ b/graphics/nitrogen/HISTORY
@@ -1,3 +1,9 @@
+2014-09-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, DEPENDS, PRE_BUILD, PREPARE: add support for building
+	  the scm version
+	* DEPENDS: add dependencies on gtk+2, glib2, gcc and an optional
+	  dependency on libxinerama
+
 2013-03-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.5.2
 	* BUILD: add libX11 to LDFLAGS
