--- a/xorg-app/xdm/HISTORY
+++ b/xorg-app/xdm/HISTORY
@@ -1,5 +1,6 @@
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
+	* DEPENDS: proper optional dependency descriptions
 
 2013-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1.11
