--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,5 +1,6 @@
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: libxt
+	* DETAILS: development: 7.11.2
 
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
